--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           class="lg:col-span-1 bg-white p-6 rounded-lg shadow-lg print:hidden h-fit"
         >
           <h1 class="text-2xl font-bold text-gray-800 mb-6 border-b pb-3">
-            Input Nota Manual
+            CV. MANDIRI PUTRA
           </h1>
 
           <fieldset class="border border-gray-300 p-4 rounded-md mb-6">
@@ -316,3 +316,4 @@
     </script>
   </body>
 </html>
+
